// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusLabel /> statuses renders bordered 1`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_notice_h3lmxn"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 2`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_info_5ni0mj"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 3`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_success_9ngehh"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 4`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_warning_kas06q"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 5`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_danger_p8x1nu"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 6`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_muted_s1bxkr"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 7`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_luxury_1ue0q2o"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 8`] = `
<span
  className="label_xffcmo-o_O-label_bordered_1f3aaih-o_O-label_plus_ncs1rt"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 1`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_notice_a0aok"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 2`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_info_13z9huf"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 3`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_success_1dekfjx"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 4`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_warning_sew9to"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 5`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_danger_15o6i4l"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 6`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_muted_q8d046"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 7`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_luxury_1tvijvk"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 8`] = `
<span
  className="label_xffcmo-o_O-label_inverted_1jg2760-o_O-label_inverted_plus_1l928rd"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 1`] = `
<span
  className="label_xffcmo-o_O-label_notice_h3lmxn"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 2`] = `
<span
  className="label_xffcmo-o_O-label_info_5ni0mj"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 3`] = `
<span
  className="label_xffcmo-o_O-label_success_9ngehh"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 4`] = `
<span
  className="label_xffcmo-o_O-label_warning_kas06q"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 5`] = `
<span
  className="label_xffcmo-o_O-label_danger_p8x1nu"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 6`] = `
<span
  className="label_xffcmo-o_O-label_muted_s1bxkr"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 7`] = `
<span
  className="label_xffcmo-o_O-label_luxury_1ue0q2o"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 8`] = `
<span
  className="label_xffcmo-o_O-label_plus_ncs1rt"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 1`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_notice_h3lmxn"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 2`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_info_5ni0mj"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 3`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_success_9ngehh"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 4`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_warning_kas06q"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 5`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_danger_p8x1nu"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 6`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_muted_s1bxkr"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 7`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_luxury_1ue0q2o"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 8`] = `
<span
  className="label_xffcmo-o_O-label_uppercased_4efw5a-o_O-label_plus_ncs1rt"
>
  <span>
    plus
  </span>
</span>
`;
